--- a/less/blocks/emotions.less
+++ b/less/blocks/emotions.less
@@ -43,6 +43,17 @@
 @media @tablet {
   .emotions__wrap {
     padding-bottom: 60px;
+    &::before {
+      content: "* – обязательные поля";
+      position: absolute;
+      bottom: -42px;;
+      right: 0;
+      font-size: 14px;
+      line-height: 26px;
+      font-weight: bold;
+      color: #333333;
+      text-transform: uppercase;
+    }
   }
   .emotions__title {
     padding-left: 75px;
