--- a/less/blocks/main-header.less
+++ b/less/blocks/main-header.less
@@ -116,10 +116,15 @@
     flex-direction: row;
   }
   .main-header__item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 20%;
+    height: 56px;
   }
   .main-header__item-link {
     font-size: 14px;
+    padding: 0;
   }
   .main-header__item:nth-of-type(2) {
     margin-right: auto;
